--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
-        <relativePath />
+        <version>2.4.2</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>memegenerator</artifactId>
+    <groupId>com.felicia</groupId>
+    <artifactId>fullstack</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>memegenerator</name>
-    <description>Demo project for Spring Boot</description>
-    <properties>
-        <java.version>14</java.version>
-    </properties>
+    <name>fullstack</name>
+    <description>Demo project for java sullstack</description>
+    <properties></properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -88,7 +86,7 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
         <dependency>
-           <groupId>org.mapstruct</groupId>
+            <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
             <version>1.3.1.Final</version>
             <scope>provided</scope>
@@ -155,12 +153,22 @@
             <version>1.5.2</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
 </project>
