--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
     "breakpoint-sass": "^2.7.1",
     "gsap": "^3.1.1",
-    "node-normalize-scss": "^8.0.0"
+    "html2canvas": "^1.0.0-rc.7",
+    "node-normalize-scss": "^8.0.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
