--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "breakpoint-sass": "^2.7.1",
+    "bulma": "^0.9.2",
     "gsap": "^3.1.1",
     "html2canvas": "^1.0.0-rc.7",
     "node-normalize-scss": "^8.0.0",
