--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/shared/styles/style.css",
+              "node_modules/bulma/css/bulma.css"
             ],
             "scripts": []
           },
