--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@stomp/stompjs": "^6.1.0",
     "breakpoint-sass": "^2.7.1",
     "gsap": "^3.1.1",
     "html2canvas": "^1.0.0-rc.7",
+    "net": "^1.0.2",
     "node-normalize-scss": "^8.0.0",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -34,6 +38,8 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
