--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
