--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://web0086.zxcs.nl:3306/cornevisser_JavaMinor?serverTimezone=UTC
-spring.datasource.username=cornevisser_JavaMinor
-spring.datasource.password=Mp1SVoji
+spring.datasource.url= ${env.DB-URL}
+spring.datasource.username= ${env.DB-USER}
+spring.datasource.password= ${env.DB-PASS}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
