--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= ${env.DB-URL}
-spring.datasource.username= ${env.DB-USER}
-spring.datasource.password= ${env.DB-PASS}
+spring.datasource.url= ${env.DB_URL}
+spring.datasource.username= ${env.DB_USER}
+spring.datasource.password= ${env.DB_PASS}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
