--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Create .env file
       uses: SpicyPizza/create-envfile@v1
       with:
-        DB_URL: "${{ secrets.DB_URL }}"
-        DB_USER: "${{ secrets.DB_USER }}"
-        DB_PASS: "${{ secrets.DB_PASS }}"
+        DB_URL: ${{ secrets.DB_URL }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASS: ${{ secrets.DB_PASS }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       working-directory: './backend'
