--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,11 @@ jobs:
     - name: Create .env file
       uses: SpicyPizza/create-envfile@v1
       with:
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_USER: ${{ secrets.DB_USER }}
-        DB_PASS: ${{ secrets.DB_PASS }}
+        envkey_DB_URL: ${{ secrets.DB_URL }}
+        envkey_DB_USER: ${{ secrets.DB_USER }}
+        envkey_DB_PASS: ${{ secrets.DB_PASS }}
+        directory: './backend'
+      
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       working-directory: './backend'
