--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,11 +24,11 @@ jobs:
     - name: Create .env file
       uses: SpicyPizza/create-envfile@v1
       with:
+        directory: '.\backend\src\main\resources'
+        file_name: .env
         envkey_DB_URL: ${{ secrets.DB_URL }}
         envkey_DB_USER: ${{ secrets.DB_USER }}
         envkey_DB_PASS: ${{ secrets.DB_PASS }}
-        directory: '.\backend\src\main\resources\'
-        file_name: .env
       
     - name: Build with Maven
       run: mvn -B package --file pom.xml
