Set java version to 14

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,7 @@
         <sonar.projectKey>Vitrav_MemeGenerator</sonar.projectKey>
         <sonar.organization>vitrav</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <java.version>14</java.version>
     </properties>
 
     <dependencies>
