--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "angular2-draggable": "^2.3.2",
     "breakpoint-sass": "^2.7.1",
     "bulma": "^0.9.2",
     "gsap": "^3.1.1",
