--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url= ${env.DB_URL}
 spring.datasource.username= ${env.DB_USER}
 spring.datasource.password= ${env.DB_PASS}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+mail.username = ${env.MAIL_USER}
+mail.password = ${env.MAIL_PASS}
