--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
     
   sonarcloud:
     name: SonarCloud
+    working-directory: './frontend'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
