--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.projectKey=memegenerator-frontend
 sonar.organization=vitrav
-sonar.sources=./frontend
-
+sonar.projectBaseDir=./frontend
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=memegenerator-frontend
 #sonar.projectVersion=1.0
