--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,6 +1,12 @@
 sonar.projectKey=memegenerator-frontend
 sonar.organization=vitrav
 
+
+sonar.sources=src
+sonar.tests=src
+sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
+sonar.test.inclusions=**/*.spec.ts,**/*test.ts
+sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.t
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=memegenerator-frontend
 #sonar.projectVersion=1.0
