--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=memegenerator-frontend
 sonar.organization=vitrav
 
+# test code coverage location
+sonar.javascript.lcov.reportPaths=.\coverage\frontend\
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=memegenerator-frontend
 #sonar.projectVersion=1.0
