--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=memegenerator-frontend
 sonar.organization=vitrav
 
 # test code coverage location
-sonar.javascript.lcov.reportPaths=.\coverage\frontend\
+sonar.javascript.lcov.reportPaths=coverage/frontend/lcov.info
 
 # https://github.com/SonarSource/sonar-training-examples/tree/master/angular/src
 # This is the name and version displayed in the SonarCloud UI.
