--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: npm ci
+        working-directory: './frontend'
+      - run: npm run build --if-present
+        working-directory: './frontend'
+      - run: ng test
+        working-directory: './frontend'
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
