--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,7 +46,7 @@ jobs:
         working-directory: './frontend'
       - run: npm run build --if-present
         working-directory: './frontend'
-      - run: ng test
+      - run: npm test
         working-directory: './frontend'
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
